<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/backdesign"
    android:layout_gravity="center"
    tools:context=".RegActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textAppearance="?android:textAppearanceLarge"
            android:textSize="40dp"
            android:textColor="#ffffff"
            />
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="30dp"
            android:hint="@string/email"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColorHint="#ffffff"
            android:background="@drawable/editdesign"
            android:textSize="30dp"

            />
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/password"
            android:textColorHint="#ffffff"
            android:layout_margin="30dp"
            android:inputType="textPassword"
            android:textAppearance="?android:textAppearanceMedium"
            android:background="@drawable/editdesign"
            android:textSize="30dp"

            />
        <EditText
            android:id="@+id/repassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/retype_password"
            android:textColorHint="#ffffff"
            android:layout_margin="30dp"
            android:inputType="textPassword"
            android:textAppearance="?android:textAppearanceMedium"
            android:background="@drawable/editdesign"
            android:textSize="30dp"
            />
        <RadioButton
            android:id="@+id/terms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accept_terms_and_conditions"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#ffffff"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@drawable/editdesign"
            android:gravity="center"
            android:text="@string/signup"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#ffffff"
            android:textSize="30dp" />
        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/already_have_account_login"
            android:textAppearance="?android:textAppearanceSmall"
            android:gravity="center"
            android:textColor="#ffffff"
            android:layout_marginTop="50dp"
            />
    </LinearLayout>
</LinearLayout>