<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/backdesign"
    tools:context=".MainActivity"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Log In"
                android:textAppearance="?android:textAppearanceLarge"
                android:textSize="40dp"
                android:textColor="#ffffff"
                />
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="30dp"
                android:hint="@string/email"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColorHint="#ffffff"
                android:background="@drawable/editdesign"
                android:textSize="30dp"
                />
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/password"
                android:textColorHint="#ffffff"
                android:layout_margin="30dp"
                android:inputType="textPassword"
                android:textAppearance="?android:textAppearanceMedium"
                android:background="@drawable/editdesign"
                android:textSize="30dp"
                />
            <TextView
                android:id="@+id/forget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#ffffff"
                android:paddingLeft="30dp"
                android:layout_marginTop="20dp"
                />
            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="#ffffff"
                android:textAppearance="?android:textAppearanceMedium"
                android:background="@drawable/editdesign"
                android:textSize="30dp"
                android:gravity="center"
                android:layout_margin="30dp"
                />
            <TextView
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup_link"
                android:textAppearance="?android:textAppearanceSmall"
                android:gravity="center"
                android:textColor="#ffffff"
                android:layout_marginTop="50dp"
                />
        </LinearLayout>
</LinearLayout>